@@ -174,6 +174,9 @@
 <MODE NAME="gnuplot"		FILE="gnuplot.xml"
 				FILE_NAME_GLOB="*.{dem,plt}" />
 
+<MODE NAME="go" FILE="go.xml"
+                FILE_NAME_GLOB="*.go" />
+
 <MODE NAME="groovy"		FILE="groovy.xml"
 				FILE_NAME_GLOB="*.{gant,gradle,groovy,grv}"/>
 
